test/e2e/artifacts/components/inference-gateway/gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
spec:
  listeners:
  - name: default
    port: 80
    protocol: HTTP
